Rename page title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Bootstrap Boiler Theme</title>
+    <title>Bootstrap Portfolio-Grid Theme</title>
 </head>
 <body>
     
