Create markup for main header area

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <title>Bootstrap Portfolio Grid Theme</title>
 </head>
 <body>
+   
+  <!-- HEADER -->
+  <div class="container">
+    <header id="main-header">
+      <div class="row no-gutters">
+        <div class="col-lg-4 col-md-4">
 
+        </div>
+        <div class="col-lg-8 col-md-7">
+          
+        </div>
+      </div>
+    </header>
+  </div>
     
 
 
