--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-lg-4 col-md-4">
-
+          <img src="img/person1.jpg" alt="">
         </div>
         <div class="col-lg-8 col-md-7">
-          
+
         </div>
       </div>
     </header>
