--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
           <img src="img/person1.jpg" alt="">
         </div>
         <div class="col-lg-8 col-md-7">
-
+          <div class="d-flex flex-column">
+            <div class="p-5 bg-dark text-white">
+              <div class="d-flex flex-row justify-content-between">
+                <h1 class="dsiplay-4">John Doe</h1>
+                <div class="d-none d-md-block">
+                  <a href="http://twitter.com" class="text-white">
+                   <i class="fab fa-twitter"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
