Add three other social media icons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
                   <a href="http://twitter.com" class="text-white">
                    <i class="fab fa-twitter"></i>
                   </a>
+               </div>
+               <div>
+                  <a href="http://facebook.com" class="text-white">
+                   <i class="fab fa-facebook"></i>
+                  </a>
+               </div>
+               <div>
+                  <a href="http://instagram.com" class="text-white">
+                   <i class="fab fa-instagram"></i>
+                  </a>
+                </div>
+                <div>
+                    <a href="http://github.com" class="text-white">
+                     <i class="fab fa-github"></i>
+                    </a>
                 </div>
               </div>
             </div>
