Add a row with text under name and social media icons

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 </div>
               </div>
             </div>
+            <div class="p-4 bg-black">
+              Experienced Full-Stack Developer
+            </div>
           </div>
         </div>
       </div>
