--- a/index.html
+++ b/index.html
@@ -71,7 +71,22 @@
         </div>
       </div>
     </header>
-  </div>
+
+
+
+
+    <!-- FOOTER  -->
+    <footer id="main-footer" class="p-5 bg-dark text--white">
+      <div class="row">
+        <div class="col-md-6">
+          <a href="#" class="btn btn-outline-light">
+            <i class="fas fa-cloud"></i> Download Resume
+          </a>
+        </div>
+      </div>
+    </footer>
+
+  </div> <!-- CLOSE CONTAINER -->
     
 
 
