--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
       </div>
     </header>
 
+    <!-- HOME COLLAPSE -->
+    <div id="home" class="collapse show">
+      <div class="card card-body bg-primary text-white py-5">
+        <h2>Welcome To My Page</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
+        </p>
+      </div>
+    </div>
 
 
 
