Create markup for content in home section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
         </p>
       </div>
+      <div class="card card-body py-5">
+        <h3>My Skills</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis cum doloremque similique suscipit eligendi nihil!
+        </p>
+        <hr>
+        <h4>HTML 5</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+      </div>
+
     </div>
 
 
