--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
         <div class="progress mb-3">
           <div class="progress-bar bg-success" style="width: 100%"></div>
         </div>
+        <h4>CSS 3</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+        <h4>Javascript</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 90%"></div>
+        </div>
+        <h4>PHP</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 80%"></div>
+        </div>
+        <h4>Python</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 70%"></div>
+        </div>
       </div>
 
     </div>
