Add header to resume area

--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
 
     </div>
 
+    <!-- RESUME COLLAPSE -->
+    <div id="resume" class="collapse">
+        <div class="card card-body bg-success text-white py-5">
+            <h2>My Resume</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
+            </p>
+          </div>
+    </div>
+
 
 
     <!-- FOOTER  -->
