--- a/index.html
+++ b/index.html
@@ -117,7 +117,32 @@
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
             </p>
-          </div>
+        </div>
+        <div class="card card-body py-5">
+         <h3>Where Have I Worked?</h3>
+         <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatem quasi reprehenderit id delectus? Minima!
+         </p>
+         <div class="card-deck">
+           <div class="card">
+             <div class="card-body">
+               <h3 class="card-title">Devmasters</h3>
+               <p class="card-text">
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, exercitationem.
+               </p>
+               <p class="p-2 mb-3 bg-dark text-white">
+                 Position: Full Stack Developer
+               </p>
+               <p class="p-2 mb-3 bg-dark text-white">
+                  Phone: (444) 444-444 
+                </p>
+             </div>
+             <div class="card-footer">
+               <h6 class="text-muted">Dates: 2016-2018</h6>
+             </div>
+           </div>
+         </div>
+        </div>
     </div>
 
 
