--- a/index.html
+++ b/index.html
@@ -134,13 +134,48 @@
                  Position: Full Stack Developer
                </p>
                <p class="p-2 mb-3 bg-dark text-white">
-                  Phone: (444) 444-444 
+                  Phone: (444) 444-4444 
                 </p>
              </div>
              <div class="card-footer">
                <h6 class="text-muted">Dates: 2016-2018</h6>
              </div>
            </div>
+           <div class="card">
+              <div class="card-body">
+                <h3 class="card-title">123 Designs</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, exercitationem.
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Web Designer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                   Phone: (555) 555-5555 
+                 </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2015-2016</h6>
+              </div>
+           </div>
+           <div class="card">
+              <div class="card-body">
+                <h3 class="card-title">Web Desinger Pros</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, exercitationem.
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position: Web Designer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                   Phone: (333) 333-3333 
+                 </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2013-2015</h6>
+              </div>
+           </div>
+
          </div>
         </div>
     </div>
