--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
     </div>
 
 
+    <!-- WORK -->
+    <div id="work" class="collapse">
+        <div class="card card-body bg-warning text-white py-5">
+            <h2>My Work</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
+            </p>
+        </div>
+    </div>
+
+
 
     <!-- FOOTER  -->
     <footer id="main-footer" class="p-5 bg-dark text--white">
