--- a/index.html
+++ b/index.html
@@ -190,6 +190,56 @@
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
             </p>
         </div>
+       <div class="card card-body py-5">
+         <h3>What Have I Built?</h3>
+         <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reiciendis aspernatur provident nam, illo commodi.
+         </p>
+         <div class="row no-gutters">
+           <div class="col-md-3">
+             <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
+               <img src="https://unsplash.it/600.jpg?image=252" alt="" class="img-fluid">
+            </a>
+           </div>
+           <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=253" alt="" class="img-fluid">
+             </a>
+           </div>
+           <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=254" alt="" class="img-fluid">
+             </a>
+           </div>
+           <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=255" alt="" class="img-fluid">
+             </a>
+           </div>
+         </div>
+         <div class="row no-gutters">
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=256" alt="" class="img-fluid">
+             </a>
+            </div>
+            <div class="col-md-3">
+               <a href="https://unsplash.it/1200/768.jpg?image=257" data-toggle="lightbox">
+                 <img src="https://unsplash.it/600.jpg?image=257" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+               <a href="https://unsplash.it/1200/768.jpg?image=258" data-toggle="lightbox">
+                 <img src="https://unsplash.it/600.jpg?image=258" alt="" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+               <a href="https://unsplash.it/1200/768.jpg?image=259" data-toggle="lightbox">
+                 <img src="https://unsplash.it/600.jpg?image=259" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div> 
+       </div>
     </div>
 
 
