--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
        </div>
     </div>
 
+    <!-- CONTACT -->
+    <div id="contact" class="collapse">
+        <div class="card card-body bg-danger text-white py-5">
+            <h2>Get In Touch</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
+            </p>
+        </div>
+    </div>
 
 
     <!-- FOOTER  -->
