Create contact form

--- a/index.html
+++ b/index.html
@@ -245,10 +245,26 @@
     <!-- CONTACT -->
     <div id="contact" class="collapse">
         <div class="card card-body bg-danger text-white py-5">
-            <h2>Get In Touch</h2>
+            <h2>Contact</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, quo!
             </p>
+        </div>
+        <div class="card card-body py-">
+          <h3>Get In Touch</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore architecto reprehenderit quidem ullam nihil aspernatur.
+          </p>
+          <form action="">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                  <span class="input-group-text bg-danger text-white">
+                    <i class="fas fa-user"></i>
+                  </span>
+              </div>
+              <input type="text" class="form-control bg-dark text-white" placeholder="Name">
+            </div>
+          </form>
         </div>
     </div>
 
