--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore architecto reprehenderit quidem ullam nihil aspernatur.
           </p>
           <form action="">
+            <div class="form-group">
             <div class="input-group input-group-lg">
               <div class="input-group-prepend">
                   <span class="input-group-text bg-danger text-white">
@@ -264,6 +265,28 @@
               </div>
               <input type="text" class="form-control bg-dark text-white" placeholder="Name">
             </div>
+          </div>
+          <div class="form-group">
+              <div class="input-group input-group-lg">
+                <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fas fa-email"></i>
+                    </span>
+                </div>
+                <input type="email" class="form-control bg-dark text-white" placeholder="Email">
+              </div>
+          </div>
+          <div class="form-group">
+              <div class="input-group input-group-lg">
+                <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fas fa-pencil-alt"></i>
+                    </span>
+                </div>
+                <textarea class="form-control bg-dark text-white" placeholder="Message"></textarea>
+              </div>
+          </div>
+          <input type="submit" value="Submit" class="btn btn-danger btn-block btn-lg">
           </form>
         </div>
     </div>
